Services/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodejs
  labels:
    app: hello-nodejs
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: hello-nodejs
