Services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nodejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /hello-nodejs(.*)
          #path: /hello-python/(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: hello-nodejs
              port:
                number: 8080
